# GoIT_PyWeb_HW_13_p2

./: README.md  pyproject.toml  requirements.txt
quotes/app_quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes/app_quotes/migrations/: 0001_initial.py  0002_alter_quote_text.py
quotes/app_quotes/templates/app_quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html  tag.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/migrations/: 0001_initial.py
quotes/users/templates/users/: login.html  logout.html  profile.html  register.html
